--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -1469,8 +1469,7 @@
         "colab": {}
       },
       "source": [
-        "def closest_word(predicted_embedding):\n",
-        "  embedding = np.loadtxt('new_cbow_300' + '.txt')\n",
+        "def closest_word(predicted_embedding, embedding):\n",
         "  features = embedding.shape[1]\n",
         "  least_dist = 100\n",
         "  index = 0\n",
@@ -1483,7 +1482,10 @@
         "      index = i\n",
         "  \n",
         "  mylist = list((tokenizer.word_index.items()))\n",
-        "  [item[0] for item in mylist if item[1] == index]"
+        "  closest_word = [item[0] for item in mylist if item[1] == index]\n",
+        "  # print (least_dist)\n",
+        "  # print(least_dist[0][0])\n",
+        "  return least_dist[0][0], closest_word[0]"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1505,18 +1507,26 @@
         "  dummy = []\n",
         "  for i, model in enumerate(models):\n",
         "    embedding = np.loadtxt(model + '.txt')\n",
-        "    print(embedding.shape)\n",
         "    predicted_embedding = embed(word1, embedding) - embed(word2, embedding) + embed(word3, embedding)\n",
         "    \n",
-        "    print(predicted_embedding.shape)\n",
-        "    #predicted_word = closest_word(predicted_embedding)\n",
-        "    \n",
-        "    \n",
-        "    predicted_word = 'dummy_word'\n",
-        "    \n",
-        "    distance_exp_true = cosine_similarity(predicted_embedding, embed(true_word, embedding))   #sim2\n",
         "\n",
-        "    df.loc[i] = [analogy] + [true_word] + [predicted_word] + [model] + [true_word == predicted_word]\n",
+        "    sim1 = cosine_similarity(predicted_embedding, embed(true_word, embedding))   #sim1 with true word\n",
+        "\n",
+        "    pair = closest_word(predicted_embedding, embedding)\n",
+        "    \n",
+        "    predicted_word = pair[1]\n",
+        "    sim2 = pair[0]\n",
+        "    \n",
+        "    \n",
+        "    sim1 = sim1[0][0]\n",
+        "    sim1 = '({val})'.format(val=sim1)\n",
+        "    t_word = true_word + sim1\n",
+        "    \n",
+        "    \n",
+        "    sim2 = '({val})'.format(val=sim2)\n",
+        "    p_word = predicted_word + sim2\n",
+        "\n",
+        "    df.loc[i] = [analogy] + [t_word] + [p_word] + [model] + [true_word == predicted_word]\n",
         "\n",
         "  return df"
       ],
@@ -1530,33 +1540,15 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 439
+          "height": 235
         },
-        "outputId": "df05220d-23af-4d4a-f33a-3c9c853cc487"
+        "outputId": "0650a5f2-1694-4bd8-91ab-c3300c3d7ad0"
       },
       "source": [
         "analogy('king', 'queen', 'woman', 'man')"
       ],
-      "execution_count": 41,
+      "execution_count": 136,
       "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "(2557, 50)\n",
-            "(1, 50)\n",
-            "(2557, 150)\n",
-            "(1, 150)\n",
-            "(2557, 300)\n",
-            "(1, 300)\n",
-            "(2557, 50)\n",
-            "(1, 50)\n",
-            "(2557, 150)\n",
-            "(1, 150)\n",
-            "(2557, 300)\n",
-            "(1, 300)\n"
-          ],
-          "name": "stdout"
-        },
         {
           "output_type": "execute_result",
           "data": {
@@ -1590,48 +1582,48 @@
               "    <tr>\n",
               "      <th>0</th>\n",
               "      <td>queen is to king as woman is to?</td>\n",
-              "      <td>man</td>\n",
-              "      <td>dummy_word</td>\n",
+              "      <td>man(0.2747060761868735)</td>\n",
+              "      <td>queen(-0.5592496528167128)</td>\n",
               "      <td>new_skipgram_50</td>\n",
               "      <td>False</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>queen is to king as woman is to?</td>\n",
-              "      <td>man</td>\n",
-              "      <td>dummy_word</td>\n",
+              "      <td>man(0.05237085339528883)</td>\n",
+              "      <td>queen(-0.5927744824086532)</td>\n",
               "      <td>new_skipgram_150</td>\n",
               "      <td>False</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>queen is to king as woman is to?</td>\n",
-              "      <td>man</td>\n",
-              "      <td>dummy_word</td>\n",
+              "      <td>man(0.15938018568449355)</td>\n",
+              "      <td>queen(-0.5980089172111602)</td>\n",
               "      <td>new_skipgram_300</td>\n",
               "      <td>False</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
               "      <td>queen is to king as woman is to?</td>\n",
-              "      <td>man</td>\n",
-              "      <td>dummy_word</td>\n",
+              "      <td>man(-0.055001982580041756)</td>\n",
+              "      <td>queen(-0.6710604283091975)</td>\n",
               "      <td>new_cbow_50</td>\n",
               "      <td>False</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
               "      <td>queen is to king as woman is to?</td>\n",
-              "      <td>man</td>\n",
-              "      <td>dummy_word</td>\n",
+              "      <td>man(0.031227230356360748)</td>\n",
+              "      <td>queen(-0.5427524069270854)</td>\n",
               "      <td>new_cbow_150</td>\n",
               "      <td>False</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>5</th>\n",
               "      <td>queen is to king as woman is to?</td>\n",
-              "      <td>man</td>\n",
-              "      <td>dummy_word</td>\n",
+              "      <td>man(-0.051832731540045016)</td>\n",
+              "      <td>queen(-0.6032603772060192)</td>\n",
               "      <td>new_cbow_300</td>\n",
               "      <td>False</td>\n",
               "    </tr>\n",
@@ -1640,13 +1632,13 @@
               "</div>"
             ],
             "text/plain": [
-              "                       Analogy task True word(sim1)  ...         Embedding Correct?\n",
-              "0  queen is to king as woman is to?             man  ...   new_skipgram_50    False\n",
-              "1  queen is to king as woman is to?             man  ...  new_skipgram_150    False\n",
-              "2  queen is to king as woman is to?             man  ...  new_skipgram_300    False\n",
-              "3  queen is to king as woman is to?             man  ...       new_cbow_50    False\n",
-              "4  queen is to king as woman is to?             man  ...      new_cbow_150    False\n",
-              "5  queen is to king as woman is to?             man  ...      new_cbow_300    False\n",
+              "                       Analogy task  ... Correct?\n",
+              "0  queen is to king as woman is to?  ...    False\n",
+              "1  queen is to king as woman is to?  ...    False\n",
+              "2  queen is to king as woman is to?  ...    False\n",
+              "3  queen is to king as woman is to?  ...    False\n",
+              "4  queen is to king as woman is to?  ...    False\n",
+              "5  queen is to king as woman is to?  ...    False\n",
               "\n",
               "[6 rows x 5 columns]"
             ]
@@ -1654,7 +1646,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 41
+          "execution_count": 136
         }
       ]
     },
@@ -1806,7 +1798,8 @@
         "# Does the order of first 2 words matter?\n",
         "# How to find the predicted word from the predicted word embedding?\n",
         "# How to find the closest word from the predicted word embedding?\n",
-        "# What is sim1 and sim2 ..?"
+        "# What is sim1 and sim2 ..?\n",
+        "# to determine closest, we should use mod of the value"
       ],
       "execution_count": 0,
       "outputs": []
