Prevent model from predicting input words

--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -138,7 +138,7 @@
         "from matplotlib import pylab\n",
         "import pandas as pd"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -163,7 +163,7 @@
       "source": [
         "print(tf.__version__) #  check what version of TF is imported"
       ],
-      "execution_count": 59,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -201,7 +201,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -236,7 +236,7 @@
       "source": [
         "cd '/content/drive/My Drive/Colab Notebooks/'"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -310,7 +310,7 @@
       "source": [
         "n_samples, V"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -341,7 +341,7 @@
         "# example of how word to integer mapping looks like in the tokenizer\n",
         "print(list((tokenizer.word_index.items()))[:5])"
       ],
-      "execution_count": 65,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -520,7 +520,7 @@
       "source": [
         "x_skipgram.shape, y_skipgram.shape"
       ],
-      "execution_count": 73,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -599,7 +599,7 @@
         "skipgram50 = skipgram_architechture(dim)\n",
         "skipgram50.summary()"
       ],
-      "execution_count": 76,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -649,7 +649,7 @@
         "skipgram50.fit(x_skipgram, y_skipgram, batch_size=64, epochs=10)\n",
         "save_embeddings(skipgram50, 'skipgram_50')"
       ],
-      "execution_count": 77,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -708,7 +708,7 @@
         "skipgram150.fit(x_skipgram, y_skipgram, batch_size=64, epochs=10)\n",
         "save_embeddings(skipgram150, 'skipgram_150')\n"
       ],
-      "execution_count": 88,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -779,7 +779,7 @@
         "skipgram300.fit(x_skipgram, y_skipgram, batch_size=32, epochs=10)\n",
         "save_embeddings(skipgram300, 'skipgram_300')"
       ],
-      "execution_count": 79,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1006,7 +1006,7 @@
       "source": [
         "cbow.summary()"
       ],
-      "execution_count": 103,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1045,7 +1045,7 @@
         "# train skipgram model\n",
         "cbow.fit(x, y, batch_size=64, epochs=10, verbose=1)"
       ],
-      "execution_count": 104,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1164,16 +1164,16 @@
       "metadata": {
         "id": "bi7D2JxNj7qX",
         "colab_type": "code",
+        "outputId": "0ed9a763-8651-4a7e-d5ec-165efcfcd799",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 255
-        },
-        "outputId": "0ed9a763-8651-4a7e-d5ec-165efcfcd799"
+        }
       },
       "source": [
         "cbow.summary()"
       ],
-      "execution_count": 92,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1202,17 +1202,17 @@
       "metadata": {
         "id": "19djsLqij_dq",
         "colab_type": "code",
+        "outputId": "5709e7d6-0eb0-4d02-81f6-6986a4252576",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 374
-        },
-        "outputId": "5709e7d6-0eb0-4d02-81f6-6986a4252576"
+        }
       },
       "source": [
         "# train skipgram model\n",
         "cbow.fit(x, y, batch_size=64, epochs=10, verbose=1)"
       ],
-      "execution_count": 93,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1344,17 +1344,17 @@
       "metadata": {
         "id": "JVRh42vmoUmP",
         "colab_type": "code",
+        "outputId": "98fcec3d-0c1c-4cf8-e866-d8c065c7c5d2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 374
-        },
-        "outputId": "98fcec3d-0c1c-4cf8-e866-d8c065c7c5d2"
+        }
       },
       "source": [
         "# train skipgram model\n",
         "cbow.fit(x, y, batch_size=64, epochs=10, verbose=1)"
       ],
-      "execution_count": 98,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1469,22 +1469,35 @@
         "colab": {}
       },
       "source": [
-        "def closest_word(predicted_embedding, embedding):\n",
-        "  features = embedding.shape[1]\n",
+        "def closest_word(predicted_embedding, word1_embedding, word2_embedding, word3_embedding, embedding):\n",
+        "  exclude_words = [predicted_embedding, word1_embedding, word2_embedding, word3_embedding]\n",
+        "  exclude_index = []\n",
+        "  for i in range(V):\n",
+        "    for j in exclude_words:\n",
+        "      if np.array_equal(j, embedding[[i]]):\n",
+        "        exclude_index.append(i)\n",
+        "  # print(exclude_index)\n",
+        "\n",
+        "  include_index = [x for x in range(V) if x not in exclude_index]\n",
+        "  # print(len(include_index))\n",
+        "\n",
         "  least_dist = 100\n",
         "  index = 0\n",
-        "  for i in range(V):  \n",
-        "    each_word = embedding[i]\n",
-        "    each_word = each_word.reshape(1,features)\n",
+        "  for i in include_index:  \n",
+        "    each_word = embedding[[i]]\n",
         "    dist = cosine_similarity(predicted_embedding, each_word)   #sim1\n",
         "    if dist < least_dist:\n",
         "      least_dist = dist\n",
         "      index = i\n",
         "  \n",
         "  mylist = list((tokenizer.word_index.items()))\n",
+        "  # for item in mylist:\n",
+        "  #   if item[1] == index and item[1] not in exclude_index:\n",
+        "  #     closest_word = item[0]\n",
         "  closest_word = [item[0] for item in mylist if item[1] == index]\n",
-        "  # print (least_dist)\n",
+        "  # print(least_dist)\n",
         "  # print(least_dist[0][0])\n",
+        "  # print(closest_word)\n",
         "  return least_dist[0][0], closest_word[0]"
       ],
       "execution_count": 0,
@@ -1507,12 +1520,15 @@
         "  dummy = []\n",
         "  for i, model in enumerate(models):\n",
         "    embedding = np.loadtxt(model + '.txt')\n",
-        "    predicted_embedding = embed(word1, embedding) - embed(word2, embedding) + embed(word3, embedding)\n",
         "    \n",
+        "    word1_embedding = embed(word1, embedding)\n",
+        "    word2_embedding = embed(word2, embedding)\n",
+        "    word3_embedding = embed(word3, embedding)\n",
+        "    predicted_embedding = word1_embedding - word2_embedding + word3_embedding\n",
         "\n",
         "    sim1 = cosine_similarity(predicted_embedding, embed(true_word, embedding))   #sim1 with true word\n",
         "\n",
-        "    pair = closest_word(predicted_embedding, embedding)\n",
+        "    pair = closest_word(predicted_embedding, word1_embedding, word2_embedding, word3_embedding, embedding)\n",
         "    \n",
         "    predicted_word = pair[1]\n",
         "    sim2 = pair[0]\n",
@@ -1538,16 +1554,16 @@
       "metadata": {
         "id": "-uoXEYoFwgtK",
         "colab_type": "code",
+        "outputId": "0650a5f2-1694-4bd8-91ab-c3300c3d7ad0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 235
-        },
-        "outputId": "0650a5f2-1694-4bd8-91ab-c3300c3d7ad0"
+        }
       },
       "source": [
         "analogy('king', 'queen', 'woman', 'man')"
       ],
-      "execution_count": 136,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1653,19 +1669,32 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "5Qh1BrvlTYhV",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "analogy('queen', 'king', 'man', 'woman')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "2w6b0OMgV7FL",
         "colab_type": "code",
+        "outputId": "11e1a7ac-87d2-477b-ec74-a0c401c24a6d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 235
-        },
-        "outputId": "11e1a7ac-87d2-477b-ec74-a0c401c24a6d"
+        }
       },
       "source": [
         "# french to France as english to England\n",
         "analogy('France', 'french', 'english', 'England')"
       ],
-      "execution_count": 137,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1773,17 +1802,17 @@
       "metadata": {
         "id": "unC4xOwyWdvf",
         "colab_type": "code",
+        "outputId": "b3e35b1d-c45a-4b7f-d190-84e252de422c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 235
-        },
-        "outputId": "b3e35b1d-c45a-4b7f-d190-84e252de422c"
+        }
       },
       "source": [
         "# forget to forgetting as remember to remembering\n",
         "analogy('forgetting', 'forget', 'remember', 'remembering')"
       ],
-      "execution_count": 138,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1891,17 +1920,17 @@
       "metadata": {
         "id": "s-czespTWuMX",
         "colab_type": "code",
+        "outputId": "344b8dcd-815b-407c-c762-cf551a2cefe2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 235
-        },
-        "outputId": "344b8dcd-815b-407c-c762-cf551a2cefe2"
+        }
       },
       "source": [
         "# hand is to leg as to eye is to ear\n",
         "analogy('knee', 'hand', 'eye', 'ear')"
       ],
-      "execution_count": 142,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2009,17 +2038,17 @@
       "metadata": {
         "id": "D8h4tA--XFPy",
         "colab_type": "code",
+        "outputId": "c86f4305-c1fa-4069-9ae2-81eff39bb8a6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 235
-        },
-        "outputId": "c86f4305-c1fa-4069-9ae2-81eff39bb8a6"
+        }
       },
       "source": [
         "# he is to his as to she is to hers\n",
         "analogy('his', 'he', 'she', 'hers')"
       ],
-      "execution_count": 143,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2121,6 +2150,19 @@
           "execution_count": 143
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1Q7ErHY7UB2L",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "analogy('he', 'his', 'hers', 'she')"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
